--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-mu will be when it is complete a social release calendar for concerts,
+When it is complete 'mu' will be a social release calendar for concerts,
 festivals, and album/EP/single releases. For now it's just a neat way for me to
 learn Flask, Python and PostgreSQL. :)
