The default app module folder has been changed to 'app'. There is still a symlink there however, in order that I can have an application name of 'mu'. Meanwhile logout, login, and register work with a couple of bugs existing only -- and mostly related to usability.

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 When it is complete 'mu' will be a social release calendar for concerts,
-festivals, and album/EP/single releases. For now it's just a neat way for me to
+festivals, and album/EP/single releases. For now it's a neat way for me to
 learn Flask, Python and PostgreSQL. :)
