--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
-    01 Implement Flask-Oauth in order to:
-       a. Register a user account.
-       b. Be able to login using that user account.
-       c. Link with Facebook and Twitter.
-    02 Add routes for basic functionality. Implement the most basic outputs.
-    03 Create semantic and simple html to display the outputs.
+01. Alter the database to allow:
+    a. works to contain multiple releases... ;)
+    b. uuid to be a key
+    c. email to be properly unique and to give the correct error message if there is a duplicate. ;)
+02. Continue writing semantic html until we have a good template making use of inheritance. :)
+03. Write code to output releases directly to the page as text. Ugly but the boiler plate code is starting to work!
