--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
-01. The database has now changed. Make sure code reflects this. Am I making the mistake of similar abstraction on similar abstraction aka reinventing the wheel?
-02. Use less objects and patterns when they are not required. It's just bloat and there is no type safety to worry about anyway.
+01. Update the database with new knowledge. Am I making mistakes: similar abstraction on similar abstraction aka reinventing the wheel?
+    Take a look at muspy. Am I making any conceptual fuckups?
+02. Remove objects and patterns when they are not required. It's just bloat and there is no type safety to worry about anyway.
 03. Think about how to separate services and follow 12 factor web app way. Can we use RabbitMQ/Celery to separate these. When?
-04. Take a look at the muspy code. Am I conceptually fucking anything up?
+04. Create some Flask test-suites.
+-------------------------------------------------------------------------------
 05. Update code to output releases directly to the page as text. Ugly but the boiler plate code is starting to work!
 06. Update code to input releases in (a) bulk and (b) singularly.
 07. Think simplicity of twitter in style and in function. How basic can I make it? Draw a mockup.
-08. Begin to use some test-suite to test the basic functionality I've created.
