--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-When it is complete 'mu' will be a social release calendar for concerts,
-festivals, and album/EP/single releases. For now it's a neat way for me to
-learn Flask, Python and PostgreSQL. :)
+Social release calendar with a music focus.
